--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #101437;
+  background: #080717;
 }
 * {
   box-sizing: border-box;
@@ -18,6 +18,11 @@ body {
 }
 *::after {
   box-sizing: border-box;
+}
+
+ol,
+ul {
+  list-style: none;
 }
 
 h1,
